--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ body {
   max-width: 68rem;
   margin: 0 auto;
   font: 1.6rem/1.25 Arial, sans-serif;
-  background-color: #353171;
+  background-color: #b3afed;
   color: #4d4d4d;
 }
 @media screen and (min-width: 620px) {
